--- a/LPP/prct07/Rakefile
+++ b/LPP/prct07/Rakefile
@@ -2,10 +2,10 @@ task :default => :spec
 
 desc "Ejecutar las espectativas de la clase list"
 task :spec do
-  sh "rspec -I. spec/test.rb"
+  sh "rspec -I. spec/list_spec.rb"
 end
 
 desc "Ejecutar con documentacion"
 task :doc do
-  sh "rspec -I. spec/test.rb --format documentation"
+  sh "rspec -I. spec/eti_spec.rb --format documentation"
 end
